@@ -7,7 +7,7 @@
  */
 package io.lighty.yang.validator.formats;
 
-import static io.lighty.yang.validator.Main.runLYV;
+import static io.lighty.yang.validator.Main.startLyv;
 
 import com.google.common.collect.ImmutableList;
 import io.lighty.yang.validator.FormatTest;
@@ -15,7 +15,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import org.testng.Assert;
 import org.testng.annotations.Test;
@@ -36,7 +35,9 @@ public class TreeTest extends FormatTest {
         setFormat();
         builder.setTreeConfiguration(0, 0, false, false, true);
         final String module = Paths.get(yangPath).resolve("ietf-ip@2018-02-22.yang").toString();
-        runLYV(ImmutableList.of(module), builder.build(), formatter);
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("ip-prefix-main-module.tree");
     }
 
@@ -45,7 +46,9 @@ public class TreeTest extends FormatTest {
         setFormat();
         builder.setTreeConfiguration(0, 0, false, true, false);
         final String module = Paths.get(yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
-        runLYV(ImmutableList.of(module), builder.build(), formatter);
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("interfaces-prefix-module.tree");
     }
 
@@ -54,7 +57,9 @@ public class TreeTest extends FormatTest {
         setFormat();
         builder.setTreeConfiguration(0, 20, false, false, false);
         final String module = Paths.get(yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
-        runLYV(ImmutableList.of(module), builder.build(), formatter);
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("interfaces-line-length.tree");
     }
 
@@ -62,7 +67,8 @@ public class TreeTest extends FormatTest {
     public void treeHelpTest() throws Exception {
         setFormat();
         builder.setTreeConfiguration(0, 0, true, false, false);
-        runLYV(Collections.emptyList(), builder.build(), formatter);
+        builder.setYangModules(List.of());
+        startLyv(builder.build(), formatter);
         runTreeTest("tree-help");
     }
 
@@ -71,7 +77,9 @@ public class TreeTest extends FormatTest {
         setFormat();
         builder.setTreeConfiguration(3, 0, false, false, false);
         final String module = Paths.get(yangPath).resolve("ietf-interfaces@2018-02-20.yang").toString();
-        runLYV(ImmutableList.of(module), builder.build(), formatter);
+        builder.setYangModules(ImmutableList.of(module));
+        final var configuration = builder.build();
+        startLyv(configuration, formatter);
         runTreeTest("interfaces-limited-depth.tree");
     }
 
@@ -98,6 +106,11 @@ public class TreeTest extends FormatTest {
     @Override
     public void runCustomModuleTest() throws Exception {
         runTreeTest("testModel.tree");
+    }
+
+    @Override
+    public void runDeviationTest() throws Exception {
+        runTreeTest("module-deviation.tree");
     }
 
     private void runTreeTest(final String comapreWithFileName) throws Exception {
